# example-global-commands

./: README.md
app1/: pyproject.toml
app1/app1/: cli.py
app2/: pyproject.toml
app2/app2/: cli.py
