[tool.poetry]
name = "app2"
version = "0.1.0"
description = ""
authors = ["finswimmer <finswimmer77@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.4"

[tool.poetry.scripts]
app2 = "app2.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
